k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zzk-front
  namespace: zzk-front
  labels:
    app: zzk-front
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: zzk-front
  template:
    metadata:
      labels:
        app: zzk-front
    spec:
      containers:
        - name: zzk-front
          image: ghcr.io/nulp-ai-enterprise/zzk-rep-front:sha-0643681
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          startupProbe:
            httpGet:
              path: /api/health
              port: 3000
            failureThreshold: 12
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 0
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
      imagePullSecrets:
        - name: ghcr-secret
