k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zzk-front
  namespace: zzk-front
spec:
  type: ClusterIP
  selector:
    app: zzk-front
  ports:
    - name: http
      port: 3000
      targetPort: http
